prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/unexpected_char.nut
// EXPECT_ERROR: "unexpected character"
let x = 
